@@ -129,12 +129,12 @@ public class GhScore extends jshm.Score {
 	public ImageIcon getRatingIcon() {
 		return this.getRatingIcon(false);
 	}
-	
+	 
 	@Transient
 	public ImageIcon getRatingIcon(boolean ignoreCalculatedRating) {		
 		int rating = ignoreCalculatedRating
 		? getRating()
-		: Math.max(getRating(), (int) Math.floor(getCalculatedRating()));
+		: Math.max(getRating(), (int) getCalculatedRating());
 		
 		return getRatingIcon(rating);
 	}
